--- a/Chrome Extension/Date_Countdown/manifest.json
+++ b/Chrome Extension/Date_Countdown/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "CountDown Timer",
   "description": "Use to count the number of days,hours,sec remaining",
-  "version": "1.2",
+  "version": "1.1",
   "browser_action": {
     "default_popup": "Coutner.html",
     "default_icon": "Icon.png"
   },
   "manifest_version": 2,
-  "permissions": ["notifications"],
+  "permissions": ["storage", "alarms", "notifications"],
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
