--- a/Date_Countdown/manifest.json
+++ b/Date_Countdown/manifest.json
@@ -1,20 +1,22 @@
 {
+  "manifest_version": 3,
   "name": "CountDown Timer",
+  "version": "2.0",
   "description": "Use to count the number of days,hours,sec remaining",
-  "version": "1.1",
-  "browser_action": {
-    "default_popup": "Coutner.html",
+  "icons": {
+    "16": "Icon.png",
+    "32": "Icon-32.png"
+  },
+  "action": {
+    "default_popup": "Counter.html",
     "default_icon": "Icon.png"
   },
-  "manifest_version": 2,
-  "permissions": ["storage", "alarms", "notifications"],
-  "commands": {
-    "_execute_browser_action": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+F",
-        "mac": "MacCtrl+Shift+F"
-      },
-      "description": "Opens Coutner.html"
-    }
+  "permissions": [
+    "storage",
+    "alarms",
+    "notifications"
+  ],
+  "background": {
+    "service_worker": "js/background.js"
   }
 }
